Fix image alignment

--- a/src/public/assets/stylesheets/index.css
+++ b/src/public/assets/stylesheets/index.css
@@ -46,6 +46,10 @@ footer {
 
 .roverImg {
   width: 300px;
-  padding: 20px;
+  padding: 10px;
+  vertical-align: bottom;
 }
 
+.cameraName {
+  text-align: center;
+}
